# file_upload_servive

./: Dockerfile  README.md  README_ARCH.MD  exemple.env  generate_structure.py  hello.py  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: schemas.py  status_router.py  upload_router.py
app/compose/: upload_compose.py
app/core/: config.py
app/services/: boto_aws.py  s3_service.py
app/usecases/: upload_file.py
static/: forms.html
