[project]
name = "file-upload-servive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = [
    "boto3>=1.37.2",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.8",
    "pydantic-setting",
]

[dependency-groups]
dev = [
    "ruff>=0.9.7",
]
